# rustfase-wasm

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/: index-BMhmqrms.js  index-BlCWqU2W.js  index-Bx4gR_Ne.css
src/: App.module.css  App.tsx
src/components/: CanvasDisplay.module.css  CanvasDisplay.tsx  FpsDisplay.tsx  VideoFeed.module.css  VideoFeed.tsx
src/hooks/: useWebcam.tsx
wasm/: Cargo.toml
wasm/pkg/: rustfase_detection.d.ts  rustfase_detection.js  rustfase_detection_bg.wasm  rustfase_detection_bg.wasm.d.ts
wasm/src/: lib.rs  models.rs  modules.rs  utils.rs
wasm/src/models/: info.rs  mosaic.rs
wasm/src/modules/: detect.rs  mosaic.rs  replace.rs  resize.rs  setup.rs
wasm/src/utils/: detector.rs  model.rs
