[package]
name = "rustfase_detection"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustface = { version = "0.1.7", default-features = false }
wasm-bindgen = "0.2"
image = "0.24"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "fat"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false